# gh_COPILOT

./: .bashrc  .codex_error_log.md  .codex_lfs_policy.yaml  .codex_run_status.json  .dockerignore  .env  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .rgignore  ADVANCED_AUTONOMOUS_FRAMEWORK_7_PHASE_COMPREHENSIVE_SCOPE.py  ADVANCED_AUTONOMOUS_FRAMEWORK_7_PHASE_SCOPE_20250102_130700.json  AGENTS.md  ARTIFACT_RECOVERY_WORKFLOW.md  AUDIT_REPORT.md  AUTONOMOUS_CLI_DEPLOYMENT_COMPLETE.md  AUTONOMOUS_CLI_README.md  BASE64_RECOVERY_REPORT.md  CHANGELOG.codex.md  CHANGELOG.md  CHANGELOG_CODEX.md  CHANGELOG_CODEX_AUTO.md  CHANGELOG_COMPLIANCE.md  CHANGELOG_Codex.md  CHANGELOG_Codex_Audit.md  CHANGELOG_Codex_Auto.md  CHANGELOG_DEP_FIX.md  CHANGELOG_DR.md  CHANGELOG_MONITORING.md  CHANGELOG_QUANTUM_PLACEHOLDERS.md  CHANGELOG_codex_automation.md  COMPLIANCE_HISTORY.md  COMPLIANCE_PIPELINE.md  COMPREHENSIVE_MODULAR_BREAKDOWN_ANALYSIS.py  COMPREHENSIVE_PROJECT_COMPLETION_STATUS.md  COMPREHENSIVE_STRATEGIC_MODULAR_COMPLETION_REPORT.md  CONTRIBUTING.md  CONVERSATION_ANALYSIS_LEARNING_PATTERNS.md  (+567 more)
._codex/: change_log.md
.circleci/: config.yml
.codex/: GATES_REPORT.txt  README.md  audit_report.json  baseline_files.txt  baseline_git_sha.txt  baseline_pytest.txt  compliance_gate.json  gap_changelog.md  index_paths.json  index_paths.txt  pytest_after.txt  readme_refs.rg
.codex_out/: python_env.json  summary.md  wlc_session_manager_run_1755465900.stderr.txt
.codex_preview/: delete_queue.txt
.github/: pull_request_template.md
_MANUAL_DELETE_FOLDER/: AGENTS_legacy.md  README.md  logs_migrated_backup_20250716_151622.db
_codex/: change-log.md  mapping.json
_codex_logs/: tree.txt
_codex_out/: CHANGELOG_Codex_Audit.md  README.cleaned.md  component_mapping.json  coverage_performance.json  errors_for_chatgpt5.md  roadmap_phase6-10.md
ai_enhancement/: __init__.py  cognitive_computing.py  ecosystem_integration.py  maintenance.py  nlp.py
analysis/: change_log.md  chatgpt5_questions.md  coverage_performance.json  coverage_performance.md  gaps.csv  mappings.json
analytics/: __init__.py  analytics_db_inspector.py  historical_metrics.json  pattern_recognition.py  performance_analysis.py  predictive_models.py  session_correlator.py  user_behavior.py
archived_databases/: archive.db
archives/: AUTONOMOUS_FRAMEWORK_COMPREHENSIVE_SCOPE.py.backup_20250710_181324  AUTONOMOUS_PRODUCTION_CREATOR.py.backup_20250710_181030  DEPLOY_ENTERPRISE_GH_COPILOT.py.backup_20250710_181049  DEPLOY_ENTERPRISE_GH_COPILOT.py.backup_20250710_181345  ENHANCED_ML_STAGING_DEPLOYMENT_MISSION_COMPLETE.py.backup_20250710_181054  ENTERPRISE_FLAKE8_MASTER_EXECUTOR.py.backup_20250710_180949  ENTERPRISE_QUALITY_ENHANCEMENT.py.backup_20250710_181508  ENTERPRISE_SELF_LEARNING_ANALYSIS_REPORT.py.backup_20250710_181407  FINAL_COMPREHENSIVE_PRODUCTION_TEST.py.backup_20250710_181254  PRODUCTION_DATABASE_CONSOLIDATION_EXECUTOR.py.backup_20250710_181433  PRODUCTION_DATABASE_CONSOLIDATION_EXECUTOR.py.backup_20250710_181531  PRODUCTION_DATABASE_CONSOLIDATION_SUMMARY.py.backup_20250710_181529  advanced_analytics.db  advanced_query_cache_system.py.backup_20250710_181539  autonomous_database_administration_finalization.py.backup_20250710_181541  (+110 more)
builds/production/builds/artifacts/configuration/: MEDIUM_DEPLOYMENT_SUMMARY.json  MEDIUM_PRODUCTION_DATABASE_CONSOLIDATION_EXECUTOR.py.metadata.json  MEDIUM_comprehensive_deployment_analysis.py.metadata.json  MEDIUM_database_organization_manager.py.metadata.json  MEDIUM_deployment_config.json  MEDIUM_deployment_results.json  MEDIUM_efficiency_calibration_results_20250706_205709.json  MEDIUM_enterprise_deployment_validator.py.metadata.json  MEDIUM_integrated_deployment_orchestrator.py.metadata.json  MEDIUM_phase_2_completion_report.json  MEDIUM_phase_4_completion_report.json  MEDIUM_system_status_report_STATUS_20250706_203057.json  MEDIUM_system_status_report_STATUS_20250706_203403.json  administrator_guide_documentation_metadata.json  api_placeholders.json  api_reference_documentation_metadata.json  audit_trail_20250709_212725.json  backup_manifest_DR_1751893467.json  ci.yml  compliance_patterns.json  comprehensive_report_20250710_015746.json  comprehensive_report_20250710_020946.json  config_template.yaml  enhanced_compliance_patterns.json  enterprise_compliance_certificate_20250709_212725.json  enterprise_deployment_packager.py.metadata.json  enterprise_deployment_preparation.py.metadata.json  enterprise_gh_copilot_deployment_orchestrator.py.metadata.json  enterprise_gh_copilot_deployment_orchestrator_windows.py.metadata.json  environment_placeholders.json  final_deployment_validation_report_20250706_180939.json  flake8_correction_report_20250709_100441.json  immediate_actions_results_20250710_094232.json  lint.yml  monitoring_placeholders.json  pis_comprehensive_report_20250709_235339.json  pis_comprehensive_report_20250710_001614.json  pis_phase2_compliance_report_20250709_231714.json  platform_validation_results.json  pyproject.toml  (+5 more)
(+4097 files in other folders)
