[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot"
version = "0.1.0"
description = "Reusable modules and orchestrators for gh_COPILOT"
authors = [{name = "gh_COPILOT Team"}]
requires-python = ">=3.8"

[project.scripts]
final-enterprise-orchestrator = "copilot.orchestrators.final_enterprise_orchestrator:main"
unified-deployment-orchestrator = "copilot.orchestrators.unified_deployment_orchestrator:main"

[tool.ruff]
target-version = "py38"
line-length = 120

extend-exclude = [
    ".git",
    "__pycache__",
    "build",
    "builds",
    "archive",
    "archives",
    "deployment/deployment_package_*/*",
    "deployment_package_*",
    "scripts/enterprise/*",
    "scripts/optimization/*",
    "scripts/utilities/*",
    "copilot_qiskit_stubs/*",
    "db_tools/*",
    "enterprise_modules/*",
    "quantum/*",
    "quantum_optimizer.py",
    "databases/*.db",
    "*.log",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-ignore = ["F541", "F841"]
ignore = ["I001", "E402", "E501"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "builds",
    "archive",
    "archives",
    "deployment_package_*",
    "databases/*.db",
    "*.log",
]
