[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-copilot"
version = "0.0.1"
description = "gh_COPILOT DB-first skeleton (DAO, FastAPI, Typer, migrations)"
authors = [{name="Aries Serpent", email="devnull@example.com"}]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "pydantic>=2.6",
  "typer[all]>=0.12",
]

[project.scripts]
gh-copilot = "gh_copilot.cli:app"

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","COM","Q","RUF"]
ignore = ["E501"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.setuptools.packages.find]
where = ["src"]

