[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot"
version = "0.1.0"
description = "Reusable modules and orchestrators for gh_COPILOT"
authors = [{name = "gh_COPILOT Team"}]
requires-python = ">=3.8"
dependencies = [
    "PyPDF2==3.0.1",
    "fastapi==0.110.0",
    "uvicorn[standard]==0.23.0",
    "pydantic==2.6.0",
    "PyYAML==6.0.2",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
quantum = ['qiskit>=1.0']
dev = ['pytest>=8.2', 'pytest-cov>=5.0', 'ruff>=0.5', 'mypy>=1.10', "typer"]

[project.scripts]
final-enterprise-orchestrator = "copilot.orchestrators.final_enterprise_orchestrator:main"
unified-deployment-orchestrator = "copilot.orchestrators.unified_deployment_orchestrator:main"
gh-copilot = "gh_copilot.cli:app"

[tool.setuptools]
# Map the root package to the source directory
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["copilot", "monitoring"]
exclude = ["scripts.quantum_placeholders"]

[tool.ruff]
target-version = "py38"
line-length = 120

extend-exclude = [
    ".git",
    "__pycache__",
    "archive",
    "archives",
    "build",
    "builds",
    "deployment/deployment_package_*/*",
    "deployment_package_*",
    "databases/*.db",
    "*.log",
    "misc",
    "scripts/enterprise/*",
    "scripts/optimization/*",
    "scripts/quantum_placeholders/*",
    "copilot_qiskit_stubs/*",
    "db_tools/*",
    "enterprise_modules/*",
    "quantum_optimizer.py",
    "recovered_files_*",
      "*.md",
      "*.rst",
      "README.md",
]

extend-include = [
    "quantum/",
    "scripts/utilities/",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-ignore = ["F541", "F841"]
ignore = ["I001", "E402", "E501"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "archive",
    "archives",
    "build",
    "builds",
    "deployment/deployment_package_*/*",
    "deployment_package_*",
    "databases/*.db",
    "*.log",
    "scripts/enterprise/*",
    "scripts/optimization/*",
    "scripts/quantum_placeholders/*",
    "copilot_qiskit_stubs/*",
    "db_tools/*",
    "enterprise_modules/*",
    "quantum_optimizer.py",
]

[tool.ruff.lint.per-file-ignores]
'assemble_db_first_bundle.py' = ['E402','E701','F401','F841']
