[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot"
version = "0.1.0"
description = "Reusable modules and orchestrators for gh_COPILOT"
authors = [{name = "gh_COPILOT Team"}]
requires-python = ">=3.8"

[project.scripts]
final-enterprise-orchestrator = "copilot.orchestrators.final_enterprise_orchestrator:main"
unified-deployment-orchestrator = "copilot.orchestrators.unified_deployment_orchestrator:main"
